# cpp-executable-template-alpha

./: .clang-format  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: CI.yml
include/: app_config.hpp.in
include/utils/: mymath.h
source/: main.cpp
source/utils/: mymath.cpp
src/: main.cpp
utest/: CMakeLists.txt  my_test.cpp
utest/source/utils/: mymath.cpp
utest/src/utils/: mymath.cpp
